# kn-hardwire-electronic-flute

./: .gitmodules
.github/workflows/: build.yml
software/: CMakeLists.txt  README.md
software/include/: constants.h  functions.h  notes.h  pins.h
software/source/: flute.c  functions.c
